--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package>
-  <name>val_description</name>
-  <version>0.0.0</version>
-  <description>The val_description package</description>
-  <maintainer email="jordan.t.lack@nasa.gov">jordan</maintainer>
+  <name>exotica_val_description</name>
+  <version>1.0.0</version>
+  <description>val_description version including our updated meshes for unit testing and visualisation. Based on the OpenHumanoids fork of the val_description package by NASA JSC. The most current version of the original package can be found at http://gitlab.com/nasa-jsc-robotics/val_description</description>
+  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
   <license>NASA-1.3</license>
   <buildtool_depend>catkin</buildtool_depend>
 </package>
