--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(val_description)
+project(exotica_val_description)
 
 find_package(catkin REQUIRED)
 
